<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="popcorn_puzzles">Popcorn Puzzles</string>
    <string name="details">This game challenges you to solve memory puzzles based on movies, series, and TV shows. With four game modes, dive into cinema and test your entertainment expertise</string>
    <string name="title_type_games">Choose your game</string>
    <string name="choose_your_game">Choose your game</string>
    <string name="lets_start">Lets Start</string>
    <string name="reward_text">You earned %1$d points and unlocked level %2$d</string>
    <string name="go_to_next_level">Go to next level</string>
    <string name="return_to_home">Return to home</string>
    <string name="question_count_text">%1$d / %2$d</string>
    <string name="level_text">Level #%1$d</string>
    <string name="congrats_text">Congrats! %1$s</string>
    <string name="answer_text_one">A |  %1$s</string>
    <string name="answer_text_two">B |  %1$s</string>
    <string name="answer_text_three">C |  %1$s</string>
    <string name="answer_text_four">D |  %1$s</string>
    <string name="characters">Characters</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="movies">Movies</string>
    <string name="memorize">Memorize</string>
    <string name="comming_soon">Coming Soon</string>
    <string name="time_out">Time Out! 😥</string>
    <string name="game_level_caption">The level is currently locked. To unlock it - you
need to pass the last level %1$d</string>
    <string name="pass_prev_level">You must pass previous level first</string>
    <string name="trivia_losing_meesage">You Have just lost noob\nbuy three hearts for %1d or play again</string>
    <string name="trivai_lost_title">You Lost GG</string>
    <string name="trivia_cancel_game">Cancel Game</string>
    <string name="trivai_buy_dialog">Buy</string>

</resources>