<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/text_view_popcorn_puzzles"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large_24dp"
            android:text="@string/popcorn_puzzles"
            android:textColor="@color/on_background_87"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image_view_game"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="@dimen/spacing_large_24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_popcorn_puzzles"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome" />

        <TextView
            android:id="@+id/text_view_details"
            style="@style/TextStyle.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginTop="@dimen/spacing_large_24dp"
            android:gravity="center"
            android:paddingVertical="@dimen/spacing_medium_16dp"
            android:text="@string/details"
            android:textColor="@color/on_background_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_game" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_extra_giant_48dp"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginBottom="@dimen/spacing_giant_32dp"
            android:text="@string/lets_start"
            android:textAllCaps="false"
            app:icon="@drawable/ic_play"
            app:iconGravity="textEnd"
            app:iconPadding="@dimen/spacing_small_8dp"
            app:iconTint="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_details"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>