<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.chocolatecake.viewmodel.game_type.GameTypeViewModel" />
        <variable
            name="listener"
            type="com.chocolatecake.viewmodel.game_type.GameTypeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/text_view_type_games"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/choose_your_game"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_card_type_game_characters"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="@{() -> listener.onClickGamePeople()}"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/card_type_game_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_type_games" />

        <TextView
            android:id="@+id/text_view_game_characters"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/characters"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="@id/view_card_type_game_characters"
            app:layout_constraintStart_toStartOf="@id/view_card_type_game_characters"
            app:layout_constraintTop_toTopOf="@id/view_card_type_game_characters" />

        <ImageView
            android:id="@+id/image_view_game_characters"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_guess_peaple"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_game_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_game_characters" />

        <View
            android:id="@+id/view_card_type_game_tv_shows"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="@{() -> listener.onClickGameTvShows()}"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/card_type_game_background"
            app:layout_constraintEnd_toEndOf="@id/view_card_type_game_characters"
            app:layout_constraintStart_toStartOf="@id/view_card_type_game_characters"
            app:layout_constraintTop_toBottomOf="@id/view_card_type_game_characters" />

        <TextView
            android:id="@+id/text_view_game_tv_shows"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/tv_shows"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="@+id/view_card_type_game_tv_shows"
            app:layout_constraintStart_toStartOf="@+id/view_card_type_game_tv_shows"
            app:layout_constraintTop_toTopOf="@+id/view_card_type_game_tv_shows" />

        <ImageView
            android:id="@+id/image_view_game_tv_show"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_guess_tvshow"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_game_tv_shows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_game_tv_shows" />

        <View
            android:id="@+id/view_card_type_game_movie"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="@{() -> listener.onClickGameMovie()}"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/card_type_game_background"
            app:layout_constraintEnd_toEndOf="@id/view_card_type_game_tv_shows"
            app:layout_constraintStart_toStartOf="@id/view_card_type_game_tv_shows"
            app:layout_constraintTop_toBottomOf="@id/view_card_type_game_tv_shows" />

        <TextView
            android:id="@+id/text_view_game_movie"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/movies"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="@+id/view_card_type_game_movie"
            app:layout_constraintStart_toStartOf="@+id/view_card_type_game_movie"
            app:layout_constraintTop_toTopOf="@+id/view_card_type_game_movie" />

        <ImageView
            android:id="@+id/image_view_game_movie"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_guess_movie"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_game_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_game_movie" />

        <View
            android:id="@+id/view_card_type_game_memorize"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="@{() -> listener.onClickGameMemorize()}"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/card_type_game_background"
            app:layout_constraintEnd_toEndOf="@id/view_card_type_game_movie"
            app:layout_constraintStart_toStartOf="@id/view_card_type_game_movie"
            app:layout_constraintTop_toBottomOf="@id/view_card_type_game_movie" />

        <TextView
            android:id="@+id/text_view_game_memorize"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/memorize"
            android:textColor="@color/on_primary"
            app:layout_constraintBottom_toBottomOf="@+id/view_card_type_game_memorize"
            app:layout_constraintStart_toStartOf="@+id/view_card_type_game_memorize"
            app:layout_constraintTop_toTopOf="@+id/view_card_type_game_memorize" />

        <ImageView
            android:id="@+id/image_view_game_memorize"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_memorize"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_game_memorize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_game_memorize" />

        <View
            android:id="@+id/view_card_type_game_comming_soon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="@{() -> listener.onClickCommingSoon()}"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/card_comming_coon_game"
            app:layout_constraintEnd_toEndOf="@id/view_card_type_game_memorize"
            app:layout_constraintStart_toStartOf="@id/view_card_type_game_memorize"
            app:layout_constraintTop_toBottomOf="@id/view_card_type_game_memorize" />

        <TextView
            android:id="@+id/text_view_game_comming_soon"
            style="@style/TextStyle.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/comming_soon"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/view_card_type_game_comming_soon"
            app:layout_constraintStart_toStartOf="@+id/view_card_type_game_comming_soon"
            app:layout_constraintTop_toTopOf="@+id/view_card_type_game_comming_soon" />

        <ImageView
            android:id="@+id/image_view_game_comming_soon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_comming_soon"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_game_comming_soon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_game_comming_soon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>